@@ -1,0 +1,54 @@
+/*
+ * include/stock/config.win
+ *
+ * Copyright 1988, 1994 by the Massachusetts Institute of Technology.
+ * All Rights Reserved.
+ *
+ * Export of this software from the United States of America may
+ *   require a specific license from the United States Government.
+ *   It is the responsibility of any person or organization contemplating
+ *   export to obtain such a license before exporting.
+ * 
+ * WITHIN THAT CONSTRAINT, permission to use, copy, modify, and
+ * distribute this software and its documentation for any purpose and
+ * without fee is hereby granted, provided that the above copyright
+ * notice appear in all copies and that both that copyright notice and
+ * this permission notice appear in supporting documentation, and that
+ * the name of M.I.T. not be used in advertising or publicity pertaining
+ * to distribution of the software without specific, written prior
+ * permission.  M.I.T. makes no representations about the suitability of
+ * this software for any purpose.  It is provided "as is" without express
+ * or implied warranty.
+ * 
+ * Machine-type definitions: IBM PC 80386 running WINDOWS
+ */
+
+#ifndef KRB5_CONFIG__
+#define KRB5_CONFIG__
+
+#define KRB5_DBM_COMPAT__                       /* Don't load dbm.h */
+#define KRB5_KDB5__                             /* Don't load kdb.h */
+#define KRB5_KDB5_DBM__                         /* Don't load kdb_dbm.h */
+
+#define BITS16
+
+#define USE_STRING_H 
+#define HAVE_SRAND
+
+#ifndef _SIZE_T_DEFINED
+typedef unsigned int size_t;
+#define _SIZE_T_DEFINED
+#endif 
+
+#ifndef _U_TYPES_DEFINED
+typedef unsigned long u_long;
+typedef unsigned char u_char;
+#define _U_LONG_DEFINED
+#endif 
+
+#ifndef API
+#define API __far __export __pascal
+#endif
+#define FAR __far
+
+#endif /* KRB5_CONFIG__ */
